# CST8152-assignments

A11/: CST8152_Compilers_F23-A11_AnswerTemplate.docx
A12/code/: Compilers.h  INPUT0_Empty-A12.out  INPUT1_Hello-A12.out  INPUT2_Volume-A12.out  INPUT3_Factorial-A12.out  INPUT4_Datatypes-A12.out  INPUT4_Datatypes.lan  INPUT5_General-A12.out  INPUT6_Big-A12-a-100-10.out  INPUT6_Big-A12-f-100-10.out  INPUT6_Big-A12-m-100-10.out  README.txt  Reader.c  Reader.h
A12/input/: INPUT2_Volume.lan  INPUT3_Factorial.lan
A21/: CST8152_Compilers_F23-A21-LANA_Model.doc  CST8152_Compilers_F23-A21-YOURLANGUAGE_Model.doc  ~$T8152_Compilers_F23-A21-LANA_Model.doc
A22/a22files/code/: Compilers.c  MainReader.c  Reader.c  (+4 more)
A22/code/: A22.bat  CMakeLists.txt  Compilers.c  Compilers.h  INPUT0_Empty-A22.out  INPUT1_Hello-A22.out  INPUT1_Hello.lan  INPUT2_Volume-A22.out  INPUT2_Volume.lan  INPUT3_Factorial-A22.out  INPUT3_Factorial.lan  INPUT4_Datatypes-A22.out  INPUT4_Datatypes.lan  INPUT5_General-A22.out  INPUT5_General.lan  Scanner.c
A31/: A31_F23_YOURLANGUAGE_Template.doc  ~$1_F23_YOURLANGUAGE_Template.doc  ~WRL0003.tmp
A32/a3files/: MainParser.c  MainReader.c  Parser.c  Parser.h  Reader.h  Scanner.h
A32/code/: A32.bat  CMakeLists.txt  Compilers.c  Compilers.h  INPUT0_Empty-A32.out  INPUT1_Hello-A32.out  INPUT1_Hello.lan  INPUT2_Volume-A32.out  INPUT2_Volume.lan  INPUT3_Factorial-A32.out  INPUT3_Factorial.lan  INPUT4_Datatypes-A32.out  INPUT4_Datatypes.lan  INPUT5_General-A32.out  INPUT5_General.lan  MainParser.c  MainScanner.c  Parser.c  Parser.h  Reader.c  Scanner.c  Scanner.h
(+30 files in other folders)
